# stardis-cuda

./: .clangd  .gitignore  .worktree-state  CMakeLists.txt  rsys-readme.md
custar-3d/0.10/: CMakeLists.txt  README.md
custar-3d/0.10/src/: cus3d_bvh.cu  cus3d_bvh.h  cus3d_bvh_internal.h  cus3d_closest_point.cu  cus3d_closest_point.h  cus3d_device.cpp  cus3d_device.h  cus3d_find_enclosure.cu  cus3d_find_enclosure.h  cus3d_geom_store.cpp  cus3d_geom_store.cu  cus3d_geom_store.h  cus3d_math.cu  cus3d_math.cuh  cus3d_mem.cpp  cus3d_mem.h  cus3d_prim.cpp  cus3d_prim.h  cus3d_trace.cu  cus3d_trace.h  cus3d_trace_util.h  cus3d_types.h  s3d.h  s3d_c.h  s3d_device.cpp  s3d_device_c.h  s3d_geometry.cpp  s3d_geometry.h  s3d_instance.cpp  s3d_instance.h  s3d_mesh.h  s3d_primitive.cpp  s3d_scene.cpp  s3d_scene_view.cpp  s3d_scene_view_batch_closest_point.cpp  s3d_scene_view_batch_trace.cpp  s3d_scene_view_c.h  s3d_scene_view_closest_point.cpp  s3d_scene_view_find_enclosure.cpp  s3d_scene_view_trace_ray.cpp  (+14 more)
htpp/0.5/: CMakeLists.txt  README.md
htpp/0.5/src/: htpp.c  htpp_version.h  htpp_version.h.in
oxstar-3d/0.10/: CMakeLists.txt
oxstar-3d/0.10/device/: kernels.cu  kernels.h  nn_kernels.cu  nn_kernels.h  nn_programs.cu  programs.cu
oxstar-3d/0.10/include/: launch_params.h  nn_launch_params.h  nn_types.h  optix_check.h  ray_types.h  unified_params.h
oxstar-3d/0.10/s3d_wrapper/: ox_s3d_device.cpp  ox_s3d_internal.h  ox_s3d_primitive.cpp  ox_s3d_scene.cpp  ox_s3d_scene_view.cpp  ox_s3d_shape.cpp  ox_s3d_types.h  s3d.h
oxstar-3d/0.10/src/: accel_manager.cpp  accel_manager.h  buffer_manager.h  device_manager.cpp  device_manager.h  geometry_manager.cpp  geometry_manager.h  main.cpp  main_old.cpp  nn_query.cpp  nn_query.h  pipeline_manager.cpp  pipeline_manager.h  ray_tracer.cpp  ray_tracer.h  unified_tracer.cpp  unified_tracer.h
oxstar-3d/0.10/tests/: test_s3d_batch_trace.c  test_s3d_camera.h  test_s3d_closest_point.c  test_s3d_device.c  test_s3d_shape.c  test_s3d_sphere_instance.c  test_s3d_trace_ray_instance.c  test_s3d_trace_ray_sphere.c
rsys/0.15/: CMakeLists.txt
rsys/0.15/src/: algorithm.h  binary_heap.h  clock_time.c  clock_time.h  condition.h  cstr.c  cstr.h  cstr_to_list.h  double2.h  double22.h  double3.h  double33.h  double4.h  double44.h  dynamic_array.h  dynamic_array_char.h  dynamic_array_double.h  dynamic_array_float.h  dynamic_array_int.h  dynamic_array_size_t.h  dynamic_array_str.h  dynamic_array_u32.h  dynamic_array_u64.h  dynamic_array_uchar.h  dynamic_array_uint.h  endianness.h  float2.h  float22.h  float3.h  float33.h  float4.h  float44.h  free_list.h  hash.c  hash.h  hash_table.h  image.c  image.h  io_c99.h  library.c  (+80 more)
star-2d/0.7/: CMakeLists.txt  README.md
star-2d/0.7/src/: s2d.h  s2d_backend.h  s2d_buffer.h  s2d_c.h  s2d_device.c  s2d_device_c.h  s2d_geometry.c  s2d_geometry.h  s2d_line_segments.c  s2d_line_segments.h  s2d_primitive.c  s2d_scene.c  s2d_scene_c.h  s2d_scene_view.c  s2d_scene_view_c.h  s2d_scene_view_closest_point.c  s2d_shape.c  s2d_shape_c.h  test_s2d_closest_point.c  test_s2d_device.c  test_s2d_primitive.c  test_s2d_raytrace.c  test_s2d_sample.c  test_s2d_scene.c  test_s2d_scene_view.c  test_s2d_scene_view2.c  test_s2d_shape.c  test_s2d_trace_ray.c  test_s2d_trace_ray_3d.c  test_s2d_utils.h
star-3d/0.10/: CMakeLists.txt  README.md
star-3d/0.10/src/: s3d.h  s3d_backend.h  s3d_buffer.h  s3d_c.h  s3d_device.cpp  s3d_device_c.h  s3d_geometry.cpp  s3d_geometry.h  s3d_instance.cpp  s3d_mesh.cpp  s3d_scene_c.h  s3d_scene_view.cpp  s3d_scene_view_c.h  s3d_scene_view_closest_point.cpp  s3d_scene_view_trace_ray.cpp  s3d_shape_c.h  s3d_sphere.cpp  test_s3d_cbox.h  test_s3d_primitive.c  test_s3d_scene_view_aabb.c  test_s3d_seams.c  test_s3d_shape.c  test_s3d_trace_ray.c  test_s3d_utils.h
star-3dut/0.4/: CMakeLists.txt  Makefile  README.md  config.mk  make.sh  s3dut.pc.in  star-3dut.tar
star-3dut/0.4/src/: s3dut.h  s3dut_cuboid.c  s3dut_cylinder.c  s3dut_mesh.c  s3dut_mesh.h  s3dut_sphere.c  s3dut_super_shape.c  test_s3dut_cuboid.c  test_s3dut_cylinder.c  test_s3dut_hemisphere.c  test_s3dut_sphere.c  test_s3dut_super_shape.c  test_s3dut_thick_cylinder.c  test_s3dut_thick_truncated_sphere.c  test_s3dut_thick_truncated_super_shape.c  test_s3dut_thin_cylinder.c  test_s3dut_truncated_sphere.c  test_s3dut_utils.h
star-cmap/0.1/: CMakeLists.txt  README.md
star-cmap/0.1/src/: scmap.c  scmap.h  scmap_palettes.c  test_scmap.c  test_scmap_fetch_color.c  test_scmap_palettes.c
star-enclosures-2d/0.6/: CMakeLists.txt  README.md
star-enclosures-2d/0.6/src/: senc2d.h  senc2d_descriptor.c  senc2d_device.c  senc2d_device_c.h  senc2d_enclosure.c  senc2d_enclosure_c.h  senc2d_enclosure_data.h  senc2d_internal_types.h  senc2d_sXd_helper.h  senc2d_scene.c  senc2d_scene_analyze.c  senc2d_scene_analyze_c.h  senc2d_scene_c.h  senc2d_side_range.h  sencX2d.h  sencX2d_undefs.h  test_senc2d_device.c  test_senc2d_enclosure.c  test_senc2d_inconsistant_square.c  test_senc2d_invalid_scenes.c  test_senc2d_many_enclosures.c  test_senc2d_many_segments.c  test_senc2d_multi_media.c  test_senc2d_sample_enclosure.c  test_senc2d_scene.c  test_senc2d_some_enclosures.c  test_senc2d_some_segments.c  test_senc2d_square_behind_square.c  test_senc2d_square_in_square.c  test_senc2d_square_on_square.c  test_senc2d_unspecified_medium.c  test_senc2d_utils.h  test_senc2d_utils2.h
star-enclosures-3d/0.7.2/: CMakeLists.txt  README.md
star-enclosures-3d/0.7.2/src/: senc3d.h  senc3d_descriptor.c  senc3d_device.c  senc3d_device_c.h  senc3d_enclosure.c  senc3d_enclosure_c.h  senc3d_enclosure_data.h  senc3d_internal_types.h  senc3d_sXd_helper.h  senc3d_scene.c  senc3d_scene_analyze.c  senc3d_scene_analyze_c.h  senc3d_scene_c.h  sencX3d.h  (+24 more)
star-geometry-3d/0.2/: CMakeLists.txt  README.md
star-sp/0.15/: CMakeLists.txt  README.md
star-stl/0.7/: 1_triangle.stl  1_triangle_no_normal.stl  1_triangle_with_noise.stl  CMakeLists.txt  README.md  empty.stl
star-wf/0.0/: CMakeLists.txt  README.md
stardis-solver/0.16.2/: CMakeLists.txt  README.md
stardis/0.12/: CMakeLists.txt  README.md
(+585 files in other folders)
